--- a/package.json
+++ b/package.json
@@ -12,20 +12,32 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor-community/background-geolocation": "^1.2.15",
+    "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.6.0",
+    "@capacitor/device": "^5.0.6",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/google-maps": "^5.4.0",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.6.0",
     "@capacitor/keyboard": "5.0.7",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@capgo/nativegeocoder": "^1.0.19",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.6",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@capacitor/cli": "5.6.0",
